OPTIMUS-36426 export changes from 122e26a9a6763c71ab971eb1d9279341ee5d93d6