@@ -12,22 +12,13 @@
 package optimus.buildtool.utils
 
 import scala.annotation.tailrec
-import scala.collection.immutable.Seq
-import scala.collection.mutable
-import scala.reflect.internal.util.Collections
-import scala.util.Properties
 import scala.collection.compat._
 
 object JavaOpts {
 
   private val WithMemoryParam = """(-X.*?)\d+[gGmMkK]""".r
-  private val GCFlags = Set(
-    "-XX:+UseSerialGC",
-    "-XX:+UseParallelGC",
-    "-XX:+USeParNewGC",
-    "-XX:+UseG1GC",
-    "-XX:+UseShenandoahGC",
-    "-XX:+UseZGC")
+  private val Xlog = """-Xlog.*""".r
+  private val GCSelector = """-XX:[+]Use.*GC""".r
   private val WithEqParam = """(-.*?)=.*""".r
   private val XXFlag = """-XX:[+\-](\w+)""".r
   private val OtherXXOption = """-XX:.*""".r
@@ -51,47 +42,51 @@ object JavaOpts {
   }
   private val WithColonParam = """(-.*?:).*""".r
 
-  val jvmJavaVersion: String = Properties.javaVersion
-  val jvmPurtyVersion: String = JavaOptionFiltering.javaPurtyVersionString(jvmJavaVersion)
-  val jvmMajorVersion: Int = JavaOptionFiltering.javaMajorVersionInt(jvmJavaVersion)
+  private final case class ParsedOpt(dedupKey: String, text: String, components: Seq[String])
 
-  private final case class ParsedOpt(name: String, text: String)
-
-  def normalize(javaOpts: Seq[String]): Seq[String] = {
+  def normalize(
+      javaOpts: Seq[String],
+      javaVersion: Option[String] = None,
+      logcb: String => Unit = _ => ()): Seq[String] = {
     val parsed = parseAll(javaOpts)
-    val deduplicated = removeDuplicates(parsed)
+    val filtered = javaVersion.fold(parsed)(jv => filterJavaRuntimeOptions(javaMajorVersionInt(jv), parsed, logcb))
+    val deduplicated = removeDuplicates(filtered)
     val verboseResolved = resolveVerboseFlags(deduplicated)
     val withoutEmptyProperties = removeEmptyProperties(verboseResolved)
-    withoutEmptyProperties.map(_.text)
+    withoutEmptyProperties.flatMap(_.components)
   }
 
   private def parseAll(javaOpts: Seq[String]): List[ParsedOpt] = {
     val split = CliArgs.normalize(javaOpts).to(List)
-    val grouped = groupWithParams(split)
-    grouped.map(parse)
-  }
 
-  def groupWithParams(opts: List[String]): List[String] = {
-    def isParam(s: String) = !s.startsWith("-")
-
-    @tailrec def recur(opts: List[String], res: List[String]): List[String] = opts match {
-      case opt :: param :: rest if isParam(param) => recur(rest, s"$opt $param" :: res)
-      case opt :: rest                            => recur(rest, opt :: res)
-      case Nil                                    => res
+    @tailrec def recur(opts: List[String], res: List[ParsedOpt]): List[ParsedOpt] = opts match {
+      case opt :: param :: rest if opt.startsWith("-") && !opt.contains("=") && !param.startsWith("-") =>
+        // no special handling for "-opt param" syntax options other than keeping the parts separately (we can't
+        // combine them into a single arg else the jvm will complain)
+        val concat = s"$opt $param"
+        val parsed = ParsedOpt(concat, concat, opt :: param :: Nil)
+        recur(rest, parsed :: res)
+      case opt :: rest =>
+        // single token options get parsed specially
+        val parsed = parse(opt)
+        recur(rest, parsed :: res)
+      case Nil => res
     }
 
-    recur(opts, Nil).reverse
+    recur(split, Nil).reverse
   }
 
   private def parse(text: String): ParsedOpt = {
-    def parsed(name: String) = ParsedOpt(name, text)
-    def asIs = ParsedOpt(text, text)
+    def parsed(dedupKey: String) = ParsedOpt(dedupKey, text, text :: Nil)
+    def asIs = ParsedOpt(text, text, text :: Nil)
+    // the point of this case analysis is to set the dedupKey correctly for interesting options
     text match {
       case WithMemoryParam(name)      => parsed(name)
-      case opt if GCFlags(opt)        => parsed("GcFlag")
+      case Xlog()                     => asIs // java 9+ convention allows for multiple -Xlog:whatever options
+      case GCSelector()               => parsed("GCSelector") // we keep only the last GC selector (they all conflict)
       case JigsawParam(_)             => asIs
-      case WithEqParam(name)          => parsed(name)
-      case XXFlag(name)               => parsed("-XX:+/-" + name)
+      case WithEqParam(name)          => parsed(name) // system properties etc.
+      case XXFlag(name)               => parsed("-XX:+/-" + name) // allow -XX:+Foo and -XX:-Foo to dedup together
       case OtherXXOption()            => asIs
       case AppendableWithColonParam() => asIs
       case WithColonParam(name)       => parsed(name)
@@ -100,11 +95,7 @@ object JavaOpts {
   }
 
   private def removeDuplicates(parsed: List[ParsedOpt]): List[ParsedOpt] =
-    parsed.reverse.distinctBy { o =>
-      // java 9+ convention allows for multiple meaningful -Xlog:whatever options
-      if (o.name == "-Xlog:") o.text
-      else o.name
-    }.reverse
+    parsed.reverse.distinctBy(_.dedupKey).reverse
 
   private def resolveVerboseFlags(opts: List[ParsedOpt]): List[ParsedOpt] = {
     opts
@@ -125,18 +116,15 @@ object JavaOpts {
     }
   }
 
-  def filterJavaRuntimeOptions(javaRuntimeVersion: String, opts: Seq[String], log: String => Unit): Seq[String] =
-    JavaOptionFiltering.filterJavaRuntimeOptions(javaRuntimeVersion, opts, log)
-
   // Called from stratosphere runconf
-  def filterJavacOptions(release: Int, opts: Seq[String], logcb: String => Unit): Seq[String] = {
+  def filterJavacOptions(release: Int, opts: Seq[String], logcb: String => Unit = _ => ()): Seq[String] = {
     val modernJava = release > 8
     val pre = s"For java $release,"
-    def log(msg: String) = if (JavaOptionFiltering.verboseFiltering) logcb(msg) else ()
+    def log(msg: String) = if (verboseFiltering) logcb(msg) else ()
     @tailrec
     def filter(opts: Seq[String], acc: Seq[String]): Seq[String] =
       opts match {
-        case flag +: arg +: rest if (JavaOptionFiltering.modernOnlyWithArg(flag)) =>
+        case flag +: arg +: rest if (modernOnlyWithArg(flag)) =>
           filter(
             rest,
             if (modernJava) {
@@ -146,7 +134,7 @@ object JavaOpts {
               log(s"$pre dropping $flag $arg")
               acc
             })
-        case flag +: rest if JavaOptionFiltering.modernOnlyWithoutArg(flag) =>
+        case flag +: rest if modernOnlyWithoutArg(flag) =>
           filter(
             rest,
             if (modernJava) {
@@ -164,14 +152,6 @@ object JavaOpts {
     filter(opts, Seq.empty)
   }
 
-  implicit class DistinctList[A](val xs: List[A]) extends AnyVal {
-    def distinctBy[B](f: A => B): List[A] =
-      Collections.distinctBy(xs)(f)
-  }
-
-}
-
-object JavaOptionFiltering {
   val modernOnlyWithArg: Set[String] = Set("--add-exports")
   val modernOnlyWithoutArg = Set.empty[String] // for now anyway
   val verboseFiltering: Boolean =
@@ -191,14 +171,6 @@ object JavaOptionFiltering {
       case _                => throw new IllegalArgumentException(s"Can't parse java version $javaVersionString")
     }
   def javaMajorVersionInt(javaVersionString: String) = javaMajorVersionString(javaVersionString).toInt
-
-  // Returns version before the decimal point, unless 1.blah or below, in which case "1." + blah before the decimal point
-  def javaPurtyVersionString(javaVersionString: String) =
-    javaVersionString.split('.').toList match {
-      case "1" :: D(v) :: _ => "1." + v
-      case D(v) :: _        => v
-      case _                => throw new IllegalArgumentException(s"Can't parse java version $javaVersionString")
-    }
 
   // Arguments with direct translations
   private val ancientToModern = Map(
@@ -224,6 +196,7 @@ object JavaOptionFiltering {
   private val modernToAncient = ancientToModern.map(_.swap)
 
   private val ddecode = """-D(\d+)(\+|\-):(-\S+)""".r
+  private val doubleBoundedDecode = """-D(\d+)_(\d+):(-\S+)""".r
 
   private val no11Equiv = Set(
     "-XX:+PrintGCCause", // "GC cause is now always logged."
@@ -238,216 +211,156 @@ object JavaOptionFiltering {
   )
 
   private val debugAgentStart = "-agentlib:jdwp="
-  private val ignoreUnrecognized = "IgnoreUnrecognizedVMOptions"
-  private val doIgnoreUnrecognized = s"-XX:+$ignoreUnrecognized"
-
-  def filterJavaRuntimeOptions(javaVersion: String, opts: Seq[String], log: String => Unit): Seq[String] =
-    filterJavaRuntimeOptions(javaMajorVersionInt(javaVersion), opts, log)
+  private val IgnoreUnrecognized = s"-XX:+IgnoreUnrecognizedVMOptions"
 
   /**
    * Convert options to those appropriate for the specified versions. If javaRuntimeVersion==0, we prepend
    * -XX:+IgnoreUnrecognizedVMOptions and keep all variants up through javaTargetVersion.
    */
-  private def filterJavaRuntimeOptions(javaVersion: Int, opts: Seq[String], logcb: String => Unit): Seq[String] = {
-    // If ignore-unrecognized is already set, assume the callers knows what they're doing, and just remove things like
-    // -D11+:something
-    if (opts.contains(doIgnoreUnrecognized))
-      opts.filter(ddecode.unapplySeq(_).isEmpty)
-    else {
-      // tolerant means we keep all versions, adding the ignore-unrecognized flag
-      val tolerantOutput = javaVersion == 0;
-      val pre = s"For java $javaVersion:"
+  private def filterJavaRuntimeOptions(
+      javaVersion: Int,
+      opts: List[ParsedOpt],
+      logcb: String => Unit): List[ParsedOpt] = {
+    // If ignore-unrecognized is already set, assume the callers knows what they're doing, and skip translations
+    val ignoreUnrecognized = opts.exists(_.text.contains(IgnoreUnrecognized))
 
-      val addExports: Seq[String] =
-        if (!tolerantOutput) Seq.empty
-        else {
-          val ourOpts = (Option(System.getenv("JAVA_OPTS")) orElse Option(System.getProperty("java_opts_testing")))
-            .filter(_.nonEmpty)
-            .getOrElse {
-              throw new AssertionError("JAVA_OPTS not available")
-            }
-          ourOpts.split("\\s").to(Seq).filter(_.contains("--add-export"))
-        }
+    // tolerant means we keep all versions, adding the ignore-unrecognized flag
+    val tolerantOutput = javaVersion == 0;
+    val pre = s"For java $javaVersion:"
 
-      // Special, stifling of filtering, because not all callers have flexible logging.
-      def log(msg: => String) = if (verboseFiltering) logcb(msg) else ()
-      def logTrans(from: String, to: String): Unit = { log(s"$pre converting $from to $to") }
-
-      val seen = mutable.HashSet.empty[Seq[String]]
-
-      var tolerated = false // have we yet had to tolerate inappropriate args
-
-      def withArg(opts: Seq[String], newArg: String, oldArg: String): Seq[String] =
-        withArgs(opts, Seq(newArg), Seq(oldArg))
-
-      def withArgs(opts: Seq[String], newArgs0: Seq[String], oldArgs0: Seq[String]): Seq[String] = {
-        // Add the transformed args if they haven't been seen before
-        val newArgs = if (!seen(newArgs0)) {
-          seen += newArgs0
-          newArgs0
-        } else Seq.empty
-        // Keep the old args if we're being tolerant (they'll already have been filtered out if seen before)
-        val oldArgs = if (tolerantOutput) {
-          tolerated = true
-          oldArgs0
-        } else Seq.empty
-        newArgs.reverse ++: oldArgs.reverse ++: opts
+    val addExports: Seq[ParsedOpt] =
+      if (!tolerantOutput) Seq.empty
+      else {
+        val ourOpts = (Option(System.getenv("JAVA_OPTS")) orElse Option(System.getProperty("java_opts_testing")))
+          .filter(_.nonEmpty)
+          .getOrElse {
+            throw new AssertionError("JAVA_OPTS not available")
+          }
+        parseAll(ourOpts.split("\\s").to(Seq).filter(_.contains("--add-export")))
       }
 
-      // Don't ignore previously seen for these.  We'll pick out the last as a final step.
-      def gcSelectors(arg: String) = arg.startsWith("-XX:+Use") && arg.endsWith("GC")
+    // Special, stifling of filtering, because not all callers have flexible logging.
+    def log(msg: => String) = if (verboseFiltering) logcb(msg) else ()
+    def logTrans(from: String, to: String): Unit = { log(s"$pre converting $from to $to") }
 
-      // True if actually true, or if we're just being tolerant, in which case make a note of our generosity.
-      def cond(x: Boolean): Boolean = x || {
-        tolerated |= tolerantOutput
-        tolerantOutput
-      }
+    var tolerated = false // have we yet had to tolerate inappropriate args
 
-      @tailrec def filterPass1(opts: Seq[String], acc: Seq[String]): Seq[String] = {
-        opts match {
-
-          // thou shalt not process arguments that be not command-line options
-          case arg +: rest if !arg.startsWith("-") =>
-            filterPass1(rest, arg +: acc)
-
-          case arg +: rest if seen(Seq(arg)) && !gcSelectors(arg) =>
-            log(s"Removing duplicate $arg")
-            filterPass1(rest, acc)
-
-          case arg1 +: arg2 +: rest if seen(Seq(arg1, arg2)) =>
-            log(s"Removing duplicate $arg1 $arg2")
-            filterPass1(rest, acc)
-
-          // Decode special syntax for conditionally unmasking runtime options
-          // -D11+:-blah    => include -blah for java >= 11
-          // -D14-:-blah    => include blah for java <= 14
-          case ddecode(vs, ss, arg) +: rest =>
-            val sign = if (ss == "+") 1 else -1
-            val argVersion = vs.toInt
-            // apply a hard cutoff to tolerant if in tolerance mode
-            if ((tolerantOutput && sign > 0) || cond(javaVersion * sign >= argVersion * sign)) {
-              log(s"$pre unmasking $arg")
-              seen += Seq(arg)
-              filterPass1(rest, arg +: acc)
-            } else {
-              log(s"$pre excluding $arg")
-              filterPass1(rest, acc)
-            }
-
-          // Remove the tolerance flag, so we can put it at the beginning.
-          case discard +: rest if tolerantOutput && discard.endsWith(ignoreUnrecognized) =>
-            log(s"Removing $discard")
-            filterPass1(rest, acc)
-
-          // two-argument version of --add-export
-          case arg +: arg2 +: rest
-              if (arg.startsWith("--add-export") || arg.startsWith("--add-opens")) && !arg.contains("=") =>
-            seen += Seq(arg, arg2)
-
-            if (cond(javaVersion >= 9)) {
-              log(s"$pre retaining $arg $arg2")
-              filterPass1(rest, arg2 +: arg +: acc)
-            } else {
-              log(s"$pre discarding $arg $arg2")
-              filterPass1(rest, acc)
-            }
-
-          case arg +: rest if no11Equiv.contains(arg) || no11EquivStarts.exists(arg.startsWith(_)) =>
-            if (cond(javaVersion < 9))
-              filterPass1(rest, arg +: acc)
-            else
-              filterPass1(rest, acc)
-
-          case arg +: rest =>
-            seen += Seq(arg)
-
-            // Direct translation from ancient to modern
-            if (ancientToModern.contains(arg) && cond(javaVersion >= 9)) {
-              val newArg = ancientToModern(arg)
-              logTrans(arg, newArg)
-              filterPass1(rest, withArg(acc, newArg, arg))
-            }
-
-            // Direct translation from modern to ancient
-            else if (modernToAncient.contains(arg) && cond(javaVersion < 9)) {
-              val newArg = modernToAncient(arg)
-              logTrans(arg, newArg)
-              filterPass1(rest, withArg(acc, newArg, arg))
-            }
-
-            // one-argument version of add-export
-            else if (arg.startsWith("--add-export") || arg.startsWith("--add-opens")) {
-              if (cond(javaVersion >= 9)) {
-                filterPass1(rest, arg +: acc)
-              } else {
-                log(s"$pre discarding $arg")
-                filterPass1(rest, acc)
-              }
-            }
-
-            // New java likes colons more than old java did
-            else if (arg.startsWith("-Xloggc:") && cond(javaVersion >= 9)) {
-              val newArg = "-Xlog:gc:" + arg.substring("-Xloggc:".length)
-              logTrans(arg, newArg)
-              filterPass1(rest, withArg(acc, newArg, arg))
-            } else if (arg.startsWith("-Xlog:gc:") && cond(javaVersion < 9)) {
-              val newArg = "-Xloggc:" + arg.substring("-Xlog:gc:".length)
-              logTrans(arg, newArg)
-              filterPass1(rest, withArg(acc, newArg, arg))
-            }
-
-            // new java requires explicit hostname specification if you intend it not to be localhost only
-            // preserve that behavior on new java
-            // the sort of string we are looking for is -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5115
-            else if (arg.startsWith(debugAgentStart)) {
-              val addressStart = arg.indexOf("address=") + "address=".length
-              val addressEnd = {
-                val nextComma = arg.indexOf(',', addressStart)
-                if (nextComma < 0) arg.length else nextComma
-              }
-              // valid formats here are 12345, foobar:12345, *:12345
-              // in java 8, 12345 means *:12345 in java 9+, but the latter is not accepted by java 8
-              val address = arg.substring(addressStart, addressEnd)
-              val newAddress = {
-                if (address.startsWith("*:") && cond(javaVersion < 9))
-                  address drop "*:".length
-                else if (!address.contains(':') && cond(javaVersion >= 9))
-                  "*:" + address
-                else address
-              }
-              val newArg = arg.patch(addressStart, newAddress, address.length)
-              logTrans(arg, newArg)
-              filterPass1(rest, newArg +: acc)
-            }
-
-            // Nothing special, it seems.
-            else
-              filterPass1(rest, arg +: acc)
-          case _ =>
-            acc
-
-        }
-      }
-
-      val pass1 = filterPass1(opts ++ addExports, Seq.empty)
-
-      // Keep only last GC specification (note that filterPass1 has reversed the order already)
-      val pass2 = pass1
-        .foldLeft((Option.empty[String], List.empty[String])) {
-          case ((opt @ Some(last), acc), arg) if gcSelectors(arg) =>
-            log(s"$pre Removing $arg in favor of last-specified $last")
-            (opt, acc)
-          case ((None, acc), arg) if gcSelectors(arg) =>
-            // found last specified
-            (Some(arg), arg :: acc)
-          case ((o, acc), arg) =>
-            (o, arg :: acc)
-        }
-        ._2
-
-      val pass3 = if (tolerated) s"-XX:+$ignoreUnrecognized" +: pass2 else pass2
-
-      pass3.toVector
+    // True if actually true, or if we're just being tolerant, in which case make a note of our generosity.
+    def cond(x: Boolean): Boolean = x || {
+      tolerated |= tolerantOutput
+      tolerantOutput
     }
+
+    val pass1: List[ParsedOpt] = (opts ++ addExports).flatMap { opt =>
+      opt.text match {
+        // thou shalt not process arguments that be not command-line options
+        case arg if !arg.startsWith("-") =>
+          opt :: Nil
+
+        // Decode special syntax for conditionally unmasking runtime options
+        // -D11+:-blah    => include -blah for java >= 11
+        // -D14-:-blah    => include blah for java <= 14
+        case ddecode(vs, ss, arg) =>
+          val sign = if (ss == "+") 1 else -1
+          val argVersion = vs.toInt
+          // apply a hard cutoff to tolerant if in tolerance mode
+          if ((tolerantOutput && sign > 0) || cond(javaVersion * sign >= argVersion * sign)) {
+            log(s"$pre unmasking $arg")
+            parse(arg) :: Nil
+          } else {
+            log(s"$pre excluding $arg")
+            Nil
+          }
+
+        // Decode special syntax for conditionally unmasking runtime options
+        // -D11_14:-blah    => include -blah for java >= 11 && java <= 14
+        case doubleBoundedDecode(startStr, endStr, arg) =>
+          val start = startStr.toInt
+          val end = endStr.toInt
+          // apply a hard cutoff to tolerant if in tolerance mode
+          if (cond(javaVersion >= start && javaVersion <= end)) {
+            log(s"$pre unmasking $arg")
+            parse(arg) :: Nil
+          } else {
+            log(s"$pre excluding $arg")
+            Nil
+          }
+        // Remove the tolerance flag, so we can put it at the beginning.
+        case IgnoreUnrecognized =>
+          log(s"Moving $IgnoreUnrecognized to beginning")
+          Nil
+
+        case arg if (arg.startsWith("--add-export") || arg.startsWith("--add-opens")) && !ignoreUnrecognized =>
+          if (cond(javaVersion >= 9)) {
+            log(s"$pre retaining $arg")
+            opt :: Nil
+          } else {
+            log(s"$pre discarding $arg")
+            Nil
+          }
+
+        case arg if (no11Equiv.contains(arg) || no11EquivStarts.exists(arg.startsWith)) && !ignoreUnrecognized =>
+          if (cond(javaVersion < 9) || ignoreUnrecognized) opt :: Nil else Nil
+
+        case arg if !ignoreUnrecognized =>
+          // Direct translation from ancient to modern
+          if (ancientToModern.contains(arg) && cond(javaVersion >= 9)) {
+            val newArg = ancientToModern(arg)
+            logTrans(arg, newArg)
+            parse(newArg) :: Nil
+          }
+
+          // Direct translation from modern to ancient
+          else if (modernToAncient.contains(arg) && cond(javaVersion < 9)) {
+            val newArg = modernToAncient(arg)
+            logTrans(arg, newArg)
+            parse(newArg) :: Nil
+          }
+
+          // New java likes colons more than old java did
+          else if (arg.startsWith("-Xloggc:") && cond(javaVersion >= 9)) {
+            val newArg = "-Xlog:gc:" + arg.substring("-Xloggc:".length)
+            logTrans(arg, newArg)
+            parse(newArg) :: Nil
+          } else if (arg.startsWith("-Xlog:gc:") && cond(javaVersion < 9)) {
+            val newArg = "-Xloggc:" + arg.substring("-Xlog:gc:".length)
+            logTrans(arg, newArg)
+            parse(newArg) :: Nil
+          }
+
+          // new java requires explicit hostname specification if you intend it not to be localhost only
+          // preserve that behavior on new java
+          // the sort of string we are looking for is -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5115
+          else if (arg.startsWith(debugAgentStart)) {
+            val addressStart = arg.indexOf("address=") + "address=".length
+            val addressEnd = {
+              val nextComma = arg.indexOf(',', addressStart)
+              if (nextComma < 0) arg.length else nextComma
+            }
+            // valid formats here are 12345, foobar:12345, *:12345
+            // in java 8, 12345 means *:12345 in java 9+, but the latter is not accepted by java 8
+            val address = arg.substring(addressStart, addressEnd)
+            val newAddress = {
+              if (address.startsWith("*:") && cond(javaVersion < 9))
+                address drop "*:".length
+              else if (!address.contains(':') && cond(javaVersion >= 9))
+                "*:" + address
+              else address
+            }
+            val newArg = arg.patch(addressStart, newAddress, address.length)
+            logTrans(arg, newArg)
+            parse(newArg) :: Nil
+          }
+
+          // Nothing special, it seems.
+          else
+            opt :: Nil
+
+        case _ => opt :: Nil
+      }
+    }
+
+    if (tolerated || ignoreUnrecognized) parse(IgnoreUnrecognized) +: pass1 else pass1
   }
+
 }
